# opengl-upwork

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
